fix typos; finish Why MSFT401k section; restructure content/order; update top link bar with fewer words and larger font

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -60,20 +60,23 @@
 
 <div id="main">
 	<div class="content">
+		<div class="main-section" id="section-why">
+			<h2>Why MSFT401k</h2>
+			<p>You're probably already contributing money into your Microsoft 401k.  And if you're like most people we talked to, you probably set up the contribution amount a long time ago and hardly look at it, if ever!  But you can do better -- and in the long run, it makes a huge difference!</p>
+			<p style="font-style: italic; font-size: 80%;">P.S.  If you're not already contributing money to your 401k, you should strongly consider it to save for retirement and take advantage of the <a href="http://careers.microsoft.com/careers/en/us/benefits-and-perks.aspx">401k match benefit</a> offered by Microsoft.</p>
+			<h3>Why It Matters</h3>
+			<p>You've probably seen a chart like this before, but let's break it down one more time.  With some standard parameters<sup>*</sup>, the difference between 5% returns and 6% is more than half a million dollars!</p>
+			<img width="800" src="assets/401kCompoundGrowth.png" alt="What a Difference 1% Makes" />
+			<p style="font-style: italic; font-size: 80%;">* Parameters: starting today out of college, $100k salary, 6% contribution to 401k, and 3% yearly salary increase.</p>
+			<h3>Here's Where We Come In</h3>
+			<p>We help you get the most out of your 401k.  We apply proven risk management strategies utilized by complex hedge fund managers worldwide to the investment options available in the Microsoft 401k Plan.  That means you get higher returns with less volatility.  Get ready for the caviar!</p>
+		</div>
 		<div class="main-section" id="section-how">
 			<h2>How It Works</h2>
-			<p id="foobar">You've probably heard about the difference between stocks and bonds, and in particular that stocks are "risker."  Well, generally speaking, that is true, and that's a core part of how this works...</p>
-			<p>First, we measure and track market risk.  Then, when the market risk is high, we put more money into bonds -- this is to protect you against a stock market crash, like in 2008.  When market risk is low, we put more money into stocks -- this is so you maximize gains when the stock market is doing well.  And the extra secret sauce: we tailor fit it to the invesment options available under the Microsoft 401k plan.</p>
-		</div>
-		<div class="main-section" id="section-returns">
-			<h2>Our Returns</h2>
-			<p>Check out our returns against the S&amp;P 500 both when the dot-com bubble burst in early 2000 and the crash of 2008.  Because we allocate funds dynamically to safer investments during periods of high volatility, we are able to protect against the huge dips and have a smoother return.</p>
-
-			<img src="assets/chartcarousel/Growth_vs_SP500.png" width="800" alt="Growth vs. S&amp;P 500">
-		</div>
-		<div class="main-section" id="section-what">
-			<h2>What Do I Do</h2>
-			<p>It's so easy!  Every quarter, we'll send you our recommendation for allocations in your 401k to maximize performance and minimize risk along with detailed <a href="stepbystep">step-by-step instructions</a>.  But, you don't have to give us your log-in information or access to your hard-earned cash.  You log in and rebalance your 401k by yourself so you're always 100% in control.</p>
+			<p>You've probably heard about the difference between stocks and bonds, and in particular that stocks are "risker." Well, generally speaking, that is true, and that's a core part of how this works...</p>
+			<p>First, we measure and track market risk.  Then, when the market risk is high, we put more money into bonds -- this is to protect you against a stock market crash, like in 2008.  When market risk is low, we put more money into stocks -- this is so you maximize gains when the stock market is doing well.  And the extra secret sauce: we tailor fit it to the investment options available under the Microsoft 401k plan.</p>
+			<h3>What Do I Do</h3>
+			<p>It's so easy!  Every quarter, we'll send you our recommendation for allocations in your 401k to maximize performance and minimize risk along with detailed <a href="stepbystep">step-by-step instructions</a>.  But, you don't have to give us your login information or access to your hard-earned cash.  You log in and rebalance your 401k by yourself so you're always 100% in control.</p>
 			<div class="two-column-div two-column-margin">
 				<img src="assets/Rebalance.png" alt="Rebalance" />
 				<br /><span style="font-style: italic; font-size: 80%;">Rebalance</span>
@@ -84,9 +87,19 @@
 			</div>
 			<div class="clear-div"></div>
 			<p>See the full <a href="stepbystep">Step-by-Step Instructions</a>.</p>
-		</div>		
+		</div>
+		<div class="main-section" id="section-returns">
+			<h2>Our Returns</h2>
+			<p>Check out our returns against the S&amp;P 500 both when the dot-com bubble burst in early 2000 and the crash of 2008.  Because we allocate funds dynamically to safer investments during periods of high volatility, we are able to protect against the huge dips and have a smoother return.</p>
+			<img src="assets/chartcarousel/Growth_vs_SP500.png" width="800" alt="Growth vs. S&amp;P 500">
+		</div>
+		<div class="main-section" id="section-vision">
+			<h2>Vision</h2>
+			<p>We started MSFT401k.com because we couldn’t find a decent way to invest our own money. We are setting out to build a product that we want first, and we think it will help friends and coworkers.</p>
+			<p>Advisors push one type of investment strategy for 401ks: passive portfolios that require investors to select a level of risk as if more risk guarantees more reward.  But, it doesn't.  More risk means more risk -- remember 2008?</p>
+			<p>We believe in an alternate and better way of investing money in our 401k. We believe risk should be measured and controlled ensuring that we hold the optimal amount of stocks (volatile!) and bonds (stable) depending on market conditions.  And, of course, we use it ourselves.</p>
+		</div>
 		<div class="main-section" id="section-who">
-			<h2>Who We Are</h2>
 			<div class="three-column-div three-column-margin">
 			<div><img src="assets/VestMe-Joe.jpg" alt="Joe" /></div>
 				<p>Joe is a product guy from Microsoft, and he's passionate about investment.  He has 3 kids and a playground in his backyard that rivals any public park.</p>
@@ -97,16 +110,9 @@
 			</div>
 			<div class="three-column-div">
 			<div><img src="assets/VestMe-Xavier.jpg" alt="Xavier" /></div>
-				<p>Xavier is an investment guru.  He is a CFA charter holder with more than 10 years of experience building financial models.</p>
+				<p>Xavier is an investment guru.  He is a CFA&reg; charter holder with more than 10 years of experience building financial models.</p>
 			</div>
 			<div class="clear-div"></div>
-		</div>
-		<div class="main-section" id="section-vision">
-			<h2>Vision</h2>
-			<p>We started MSFT401k.com because we couldn’t find a decent way to invest our own money. We are setting out to build a product that we want first, and we think it will help friends and coworkers.</p>
-			<p>Advisors push one type of investment strategy for 401ks: passive portfolios that require investors to select a level of risk as if more risk guarantees more reward.  But, it doesn't.  More risk means more risk -- remember 2008?</p>
-			<p>We believe in an alternate and better way of investing money in our 401k. We believe risk should be measured and controlled ensuring that we hold the optimal amount of stocks (volatile!) and bonds (stable) depending on market conditions.</p>
-			<p>Our algorithm is based on proven risk management strategies utilized by complex hedge fund managers worldwide. We believe in its ability to control the ups and downs of the market while also giving us a solid, steady return over the long run.  And, or course, we use it ourselves.</p>
 		</div>
 	</div>
 
