--- a/app/views/home/terms.html.erb
+++ b/app/views/home/terms.html.erb
@@ -43,7 +43,7 @@
 		any reason.</p>
 
 		<p>Nothing herein should be read to constitute or be considered as an offer or
-		solicitation by MSFT401k.com.com, its principal Vest Me, LLC, associates
+		solicitation by MSFT401k.com, its principal Vest Me, LLC, associates
 		or affiliates as an offer to sell or a solicitation to buy securities to any
 		person residing in the United States of America or in any other jurisdiction
 		in which such an offer or solicitation is unlawful. The information is
@@ -103,7 +103,9 @@
 		the benefit of hindsight. No representation is being made that any account
 		will or is likely to achieve profits or losses similar to those shown.</p>
 
-		<p>Conflict of Interest Market analysis and trading tools featured at the
+		<h2>Conflict of Interest </h2>
+
+		<p>Market analysis and trading tools featured at the
 		Website are based on MSFT401k.com’s investment and trading strategies.</p>
 
 		<p>All statements made represent the opinion of MSFT401k.com and Vest Me,
@@ -112,7 +114,7 @@
 		<p>Although the information published by the Website has been derived
 		from sources (end of day prices) that are believed to be reliable, they
 		are not always necessarily complete and cannot be guaranteed. Neither
-		MSFT401k.com.com nor any of its principals and associates shall have any
+		MSFT401k.com nor any of its principals and associates shall have any
 		liability for any loss sustained by anyone who has relied on the information
 		published.</p>
 
@@ -133,7 +135,7 @@
 
 		<p>The information is issued by the Website with the express condition,
 		to which everyone using it accepts, that no obligation, responsibility or
-		liability shall be incurred by MSFT401k.com.com, it’s principal, Vest
+		liability shall be incurred by MSFT401k.com, it’s principal, Vest
 		Me, LLC or any of its officers, directors, members, employees, agents,
 		consultants or licensors. They shall not be liable to any person or entity for
 		any losses, damages, costs or expenses (including, but not limited to, loss
