--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,5 +2,6 @@
 	<div class="content">
 		<p>We are NOT investment advisors.  See our <a href="terms">Terms</a>.</p>
 		<p>Questions? <a href="mailto:team@MSFT401k.com">Contact Us</a>.</p>
+		<p>CFA&reg; is a registered trademark owned by CFA Institute.</p>
 	</div>
 </footer>
