--- a/app/views/layouts/_header_home.html.erb
+++ b/app/views/layouts/_header_home.html.erb
@@ -7,11 +7,9 @@
 
 		<div id="navbar">
 			<a id="top-link-signup" href="#" onclick="scroll_to_top()">Sign Up</a> |
-			<a id="top-link-how" href="#" onclick="top_link_scroll('how')">How It Works</a> |
-
-			<a id="top-link-returns" href="#" onclick="top_link_scroll('returns')">Our Returns</a> |
-			<a id="top-link-what" href="#" onclick="top_link_scroll('what')">What Do I Do</a> |
-			<a id="top-link-who" href="#" onclick="top_link_scroll('who')">Who We Are</a> |
+			<a id="top-link-why" href="#" onclick="top_link_scroll('why')">Why</a> |
+			<a id="top-link-how" href="#" onclick="top_link_scroll('how')">How</a> |
+			<a id="top-link-returns" href="#" onclick="top_link_scroll('returns')">Returns</a> |
 			<a id="top-link-vision" href="#" onclick="top_link_scroll('vision')">Vision</a>
 		</div>
 
