--- a/app/views/layouts/_header_other.html.erb
+++ b/app/views/layouts/_header_other.html.erb
@@ -7,10 +7,9 @@
 
 		<div id="navbar">
 			<a id="top-link-signup" href="/">Sign Up</a> |
-			<a id="top-link-how" href="/#how">How It Works</a> |
-			<a id="top-link-returns" href="/#returns">Our Returns</a> |
-			<a id="top-link-what" href="/#what">What Do I Do</a> |
-			<a id="top-link-who" href="/#who">Who We Are</a> |
+			<a id="top-link-why" href="/#why">Why</a> |
+			<a id="top-link-how" href="/#how">How</a> |
+			<a id="top-link-returns" href="/#returns">Returns</a> |
 			<a id="top-link-vision" href="/#vision">Vision</a>
 		</div>
 
