--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
   <%= csrf_meta_tags %>
 
   <script type="text/javascript">
-  	var isAndroidOriDevice = navigator.userAgent.match(/iPad|iPhone|iPod|Android/g);
-  	if (isAndroidOriDevice != null) { 
+  	var isiDevice = navigator.userAgent.match(/iPad|iPhone|iPod/g);
+  	if (isiDevice != null) { 
   		document.write('<meta name="viewport" content="width=840, user-scalable=no" />');
   	}
   	else {
