make minor change to Why It Matters section

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -65,7 +65,7 @@
 			<p>You're probably already contributing money into your Microsoft 401k.  And if you're like most people we talked to, you probably set up the contribution amount a long time ago and hardly look at it, if ever!  But you can do better -- and in the long run, it makes a huge difference!</p>
 			<p style="font-style: italic; font-size: 80%;">P.S.  If you're not already contributing money to your 401k, you should strongly consider it to save for retirement and take advantage of the <a href="http://careers.microsoft.com/careers/en/us/benefits-and-perks.aspx">401k match benefit</a> offered by Microsoft.</p>
 			<h3>Why It Matters</h3>
-			<p>You've probably seen a chart like this before, but let's break it down one more time.  With some standard parameters<sup>*</sup>, the difference between 5% returns and 6% is more than half a million dollars!</p>
+			<p>You've probably seen a chart like this before, but let's break it down one more time.  With some standard parameters<sup>*</sup>, the difference between annual returns of 5% and 6% is more than half a million dollars, which is an increase of over 25%!</p>
 			<img width="800" src="assets/401kCompoundGrowth.png" alt="What a Difference 1% Makes" />
 			<p style="font-style: italic; font-size: 80%;">* Parameters: starting today out of college, $100k salary, 6% contribution to 401k, and 3% yearly salary increase.</p>
 			<h3>Here's Where We Come In</h3>
