--- a/app/views/home/stepbystep.html.erb
+++ b/app/views/home/stepbystep.html.erb
@@ -1,13 +1,14 @@
 <%= render 'layouts/header_other' %>
 
 <div id="poster">
+	<div id="header-background"></div>
 	<div class="content">
 		<h1>Step-by-Step Instructions</h1>
 	</div>
 </div>
 
 <div id="main-terms">
-	<div class="content">
+	<div class="content instructions">
 		<%= render 'layouts/instructions' %>
 	</div>
 
