--- a/app/views/layouts/_header_home.html.erb
+++ b/app/views/layouts/_header_home.html.erb
@@ -1,6 +1,6 @@
 <header id="header">
 	<div class="content">
-		<div id="logo" onclick="window.location.replace('/');" style="cursor: pointer;">
+		<div id="logo" onclick="scroll_to_top()" style="cursor: pointer;">
 			<div id="logo-line-1">MSFT401k</div>
 			<div id="logo-line-2">by Vest Me</div>			
 		</div>
