--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -6,9 +6,32 @@
   <body style="font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;">
     <div id="main">
       <div class="content">
-        <h2 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 200%;">Get excited! You're Signed Up!!</h2>
-        <%= render 'layouts/signupblurb' %>
-        <%= render 'layouts/instructions' %>
+        <h3 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Welcome to MSFT401k!</h3>
+        <p>You've smart!  Way to take control of your 401k!!  We'll send you new allocations every quarter.  If you have any questions, drop us a line: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.</p>
+        <h3 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Get Started Now</h3>
+        <p>Update your 401k account now using our <a href="http://www.msft401k.com/stepbystep">step-by-step instructions</a> and this quarter's allocations (below).</p>
+        <table border="1" cellspacing="0">
+          <tr>
+            <th>Fund</th>
+            <th>Allocation</th>
+          </tr>
+          <tr>
+            <td>Fund 1</td>
+            <td>25%</td>
+          </tr>
+          <tr>
+            <td>Fund 2</td>
+            <td>25%</td>
+          </tr>
+          <tr>
+            <td>Fund 3</td>
+            <td>40%</td>
+          </tr>
+          <tr>
+            <td>Fund 4</td>
+            <td>10%</td>
+          </tr>
+        </table>
       </div>
     </div>
   </body>
