--- a/app/views/home/terms.html.erb
+++ b/app/views/home/terms.html.erb
@@ -1,6 +1,7 @@
 <%= render 'layouts/header_other' %>
 
 <div id="poster">
+	<div id="header-background"></div>
 	<div class="content">
 		<h1>Terms of Service</h1>
 	</div>
